[gd_scene load_steps=32 format=3 uid="uid://bx5l6q5outjxn"]

[ext_resource type="Script" uid="uid://cj1ficr38vxnw" path="res://scenes/documents/_document_base.gd" id="1_2eha8"]
[ext_resource type="Texture2D" uid="uid://b1dllgjdww5sn" path="res://assets/images/Humble Gift - v1.3/PNG/SpriteSheet.png" id="2_tyhhf"]
[ext_resource type="AudioStream" uid="uid://cfm0dl2dsvi5u" path="res://assets/audio/ovani/Flip Page Journal A.wav" id="3_aayc2"]
[ext_resource type="Texture2D" uid="uid://cnqds56km6bcr" path="res://assets/artwork/paper_sheet_1.png" id="3_kcaub"]
[ext_resource type="FontFile" uid="uid://dsrd48vqxljye" path="res://assets/fonts/Match 7p.ttf" id="4_s665b"]
[ext_resource type="FontFile" uid="uid://bgx7d575fvt8c" path="res://assets/fonts/Match 7h.ttf" id="5_5n1x4"]
[ext_resource type="AudioStream" uid="uid://ba5541rqgav78" path="res://assets/audio/ovani/Pick Up Paper A.wav" id="7_h824l"]
[ext_resource type="AudioStream" uid="uid://dqw240cs502lc" path="res://assets/audio/ovani/Pick Up Paper B.wav" id="8_r1d5n"]
[ext_resource type="AudioStream" uid="uid://cadjk86vhstqq" path="res://assets/audio/ovani/Pick Up Paper C.wav" id="9_yu40b"]
[ext_resource type="AudioStream" uid="uid://bwdhjwmijtaps" path="res://assets/audio/ovani/Pick Up Paper D.wav" id="10_jfj33"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_cvic1"]
random_pitch = 1.2
random_volume_offset_db = 2.0
streams_count = 4
stream_0/stream = ExtResource("3_aayc2")
stream_1/stream = ExtResource("3_aayc2")
stream_2/stream = ExtResource("3_aayc2")
stream_3/stream = ExtResource("3_aayc2")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_a75p4"]
random_pitch = 1.2
random_volume_offset_db = 2.0
streams_count = 4
stream_0/stream = ExtResource("7_h824l")
stream_1/stream = ExtResource("8_r1d5n")
stream_2/stream = ExtResource("9_yu40b")
stream_3/stream = ExtResource("10_jfj33")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_aayc2"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
texture = ExtResource("3_kcaub")
texture_margin_left = 24.0
texture_margin_top = 24.0
texture_margin_right = 16.0
texture_margin_bottom = 26.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j1q8d"]
size = Vector2(262, 282)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_c0npc"]
animation = &"archive"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_r1d5n"]
animation = &"furnace"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_yu40b"]
animation = &"message"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_h824l"]
animation = &"normal"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_pmys1"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_jfj33"]
xfade_time = 0.4

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_a75p4"]
xfade_time = 0.4

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_3dkc0"]
xfade_time = 0.4

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ftr30"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ug803"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ks2xy"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_ftr30"]
states/archive/node = SubResource("AnimationNodeAnimation_c0npc")
states/archive/position = Vector2(594, 100)
states/furnace/node = SubResource("AnimationNodeAnimation_r1d5n")
states/furnace/position = Vector2(594, 313)
states/message/node = SubResource("AnimationNodeAnimation_yu40b")
states/message/position = Vector2(594, 206)
states/normal/node = SubResource("AnimationNodeAnimation_h824l")
states/normal/position = Vector2(396, 100)
transitions = ["Start", "normal", SubResource("AnimationNodeStateMachineTransition_pmys1"), "normal", "archive", SubResource("AnimationNodeStateMachineTransition_jfj33"), "normal", "furnace", SubResource("AnimationNodeStateMachineTransition_a75p4"), "normal", "message", SubResource("AnimationNodeStateMachineTransition_3dkc0"), "message", "normal", SubResource("AnimationNodeStateMachineTransition_ftr30"), "furnace", "normal", SubResource("AnimationNodeStateMachineTransition_ug803"), "archive", "normal", SubResource("AnimationNodeStateMachineTransition_ks2xy")]

[sub_resource type="Animation" id="Animation_ug803"]
resource_name = "normal"
length = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ks2xy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_n5h2r"]
resource_name = "archival"
length = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.774014, 0.791344, 0.520149, 1)]
}

[sub_resource type="Animation" id="Animation_x5xxm"]
resource_name = "redaction"
length = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.845698, 0.470134, 0.448184, 1)]
}

[sub_resource type="Animation" id="Animation_c0npc"]
resource_name = "message"
length = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.526239, 0.880222, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j862i"]
_data = {
&"RESET": SubResource("Animation_ks2xy"),
&"archive": SubResource("Animation_n5h2r"),
&"furnace": SubResource("Animation_x5xxm"),
&"message": SubResource("Animation_c0npc"),
&"normal": SubResource("Animation_ug803")
}

[node name="DocumentBase" type="Node2D"]
script = ExtResource("1_2eha8")

[node name="OnMoveShuffleSound" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_cvic1")
bus = &"SFX"

[node name="OpenedStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_a75p4")
autoplay = true
bus = &"SFX"

[node name="PanelContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
modulate = Color(0.774014, 0.791344, 0.520149, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -131.0
offset_top = -141.0
offset_right = 131.0
offset_bottom = 141.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxTexture_aayc2")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="DocumentBody" type="RichTextLabel" parent="PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_s665b")
theme_override_fonts/bold_font = ExtResource("5_5n1x4")
bbcode_enabled = true
text = "Content"
fit_content = true
scroll_active = false

[node name="Area2D" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
unique_name_in_owner = true
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_j1q8d")

[node name="HoverModulationTree" type="AnimationTree" parent="."]
unique_name_in_owner = true
root_node = NodePath("%HoverModulationTree/..")
tree_root = SubResource("AnimationNodeStateMachine_ftr30")
anim_player = NodePath("AnimationPlayer")

[node name="AnimationPlayer" type="AnimationPlayer" parent="HoverModulationTree"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_j862i")
}

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
